# cmake_example

./: CMakeLists.txt  README.md  age.txt  main.cpp
src/: CMakeLists.txt
src/application/: main.cpp
src/input/: read.cpp  read.h
